[B]1.2.13:[/B] 14. 12. 2016
- Nová možnost automatického výběru videa dle jazyka
[B]1.2.5:[/B] 26. 03. 2016
- Oprava #41 Kdy plugin blokoval kodi v ukonční (Kuci)
[B]1.2.4:[/B] 28. 02. 2016
- Opravené vyhľadanie na systémoch s nainštalovanou knižnicou lxml
[B]1.2.3:[/B] 20. 10. 2015
- opraveno stahování videí
[B]1.2.2:[/B] 06. 07. 2015
- přidána možnost hledání filmů
[B]1.2.1:[/B] 04. 07. 2015
- oprava .strm lze nyní ukládat i na jiné datové stroje (samba)
[B]1.2.0:[/B] 02. 07. 2015
- .strm soubory se nyní přegenerovávají pravidelně. (Zatím 1 za hod)
[B]1.1.0:[/B] 30. 05. 2015
- možnost v kontextovém menu vytvářet .strm soubory (bbaronSVK)
- nové kategorie (Naposled přidané...) (bbaronSVK)
- názvy filmů/seriálů se listují v angličtině (dle lokalizace)
[B]1.0.3:[/B]
- nová adresa serveru
[B]1.0.1:[/B]
- oprava chyby při listování většiny seriálů
[B]1.0.0:[/B]
Initial version - migration from plugin.video.tv.sosac.ph