@@ -1,3 +1,5 @@
+[B]1.3.0:[/B] xx. 01. 2017
+- Přepsání a použití JSON souborů od sosac (Saljack)
 [B]1.2.13:[/B] 14. 12. 2016
 - Nová možnost automatického výběru videa dle jazyka
 [B]1.2.5:[/B] 26. 03. 2016
